--- a/write-up/write-up.rmd
+++ b/write-up/write-up.rmd
@@ -16,7 +16,7 @@ bibliography: ["/home/friend/bibtex/references.bib"]
 biblio-style: "apalike"
 nocite: | 
   [@hossainMoralEconomyGlobal2014],[@senIngredientsFamineAnalysis1981],[@almond1918InfluenzaPandemic2006],[@heckmanCausalParametersPolicy2000] ,[@blockMacroShocksMicro2004]
-abstract: "I explore the effect of the 2008 world food price crisis on the health of Senegalese children who were *in-utero* at the time. As predicted by the food-policy literature, I find that the 2008 crisis had a large, negative impact on maternal health in urban areas, but a small, positive effect in rural areas. Observing the same urban cohort over time, I find that the effect of exposure is apparent in 2010 but not in 2012, suggesting catch-up in infant health. Iron is a critical nutrient in early-life development, suggesting that this catch-up masks an important negative shock to health. Further research is needed to determine the long-term effects of *in-utero* exposure to the 2008 crisis." 
+abstract: "I explore the effect of the 2008 world food price crisis on the health of Senegalese children who were *in-utero* at the time. As predicted by the food-policy literature, I find that the 2008 crisis had a large, negative impact on maternal health in urban areas, but a small, positive effect in rural areas. Observing the same urban cohort over time, I find that the effect of exposure is apparent in 2010 but not in 2012, suggesting catch-up in infant health. As iron is a critical nutrient in early-life development, this catch-up may mask an important negative shock to health. Further research is needed to determine the long-term effects of *in-utero* exposure to the 2008 crisis." 
 ---	
 
 ```{r setup, include=FALSE}
@@ -34,11 +34,11 @@ load("~/Research/Anemia/Anemia/data/index.Rdata")
 
 # Introduction
 
-The world's poor rely increasingly on local and global markets to provide their basic food needs. More than half the world's population now lives in cities, where providing your own food supply is near-impossible. In rural settings the self-reliant peasant has been replaced by the petty-commodity producer and wage laborer [@bernsteinClassDynamicsAgrarian2010]. Food entitlements are mediated by market forces, as both rural and urban-dwellers must exchange their labor and produce in return for food. Following the reduction in trade-barriers over the last 40 years, most poor countries now rely on imported foodstuffs to meet domestic demand. While we assume that this integration has led to rising incomes, the resulting specialization has also left the world's poor vulnerable to fluctuations in world markets. A sudden increase in the price of food, for reasons external to the poor economy, may lead to a reduction in food purchasing-power and increased malnutrition.
+The world's poor rely increasingly on local and global markets to provide their basic food needs. More than half the world's population now lives in cities, where providing your own food supply is near-impossible. In rural settings the self-reliant peasant has been replaced by the petty-commodity producer and wage laborer [@bernsteinClassDynamicsAgrarian2010]. Food entitlements are mediated by market forces, as both rural and urban-dwellers must exchange their labor and produce in return for food. Following the reduction in trade-barriers over the last 40 years, most poor countries now rely on imported foodstuffs to meet domestic demand. While we expect that this integration has led to gains from trade, the resulting specialization has also left the world's poor vulnerable to fluctuations in world markets. A sudden increase in the price of food, for reasons external to the economy of a poor country, may lead to a reduction in food purchasing-power and increased malnutrition.
 
-In early 2008, such an increase was realized. The prices of rice and wheat doubled over the course of a few months, while the prices of other staples increased as well. The causes of the price increase are debated, but include both American agriculture policy and the sub-prime mortgage crisis [@rossetFoodSovereigntyContemporary2008]. Rising prices decreased the purchasing-power of consumers around the world, resulting in unrest and riots in low-to-medium-income countries.
+In early 2008, such an increase was realized. The prices of rice and wheat doubled over the course of a few months, while those of other staples also increased. The causes of the price increase are debated, but include both American agriculture policy and the sub-prime mortgage crisis [@rossetFoodSovereigntyContemporary2008]. Rising prices decreased the purchasing-power of consumers around the world, resulting in unrest and riots in low-to-medium-income countries, including Senegal.
 
-The 2008 world food price crisis, as it was named, drew attention from major journals Science and Nature, as well as from the fields of peasant studies, nutrition, and development.[^1] Much of the literature is qualitative, as real-time measures of health and welfare are difficult to procure. My work, which ties the crisis to observed changes in maternal health, thus fills an important hole in the existing literature. The crisis was viewed as evidence of the risk that poor countries take by specializing in cash-crops for export and relying on imported food. Much of the subsequent rhetoric in these fields advocated reduced integration into the world market, and more self-sufficiency in food production [@rossetFoodSovereigntyContemporary2008].
+The 2008 world food price crisis, as it was named, drew attention from major journals Science and Nature, as well as from the fields of peasant studies, nutrition, and development.[^1] The crisis was viewed as evidence of the risk that poor countries take by specializing in cash-crops for export and relying on imported food. Much of the subsequent rhetoric in these fields advocated reduced integration into the world market, and more self-sufficiency in food production [@rossetFoodSovereigntyContemporary2008]. Much of the literature is qualitative, as real-time measures of health and welfare are difficult to procure. My work, which ties the crisis to observed changes in maternal health, thus fills an important hole in the existing literature. 
 
 [^1]: See @cohenFoodPriceCrisis2010; @hadleyHouseholdCapacitiesVulnerabilities2011; @martin-prevel2008FoodPrice2012; @minotTransmissionWorldFood2010; @ruelFoodFuelFinancial2009; @wodonRisingFoodPrices2008; @vonbraunFoodCrisisIsn2008; @barrettMeasuringFoodInsecurity2010; @comptonImpactGlobalFood2010; @headeyImpactGlobalFood2013.
 
@@ -169,14 +169,20 @@ For my analysis, I use the Demographic and Health Survey (DHS), a nationally rep
 
 At birth, a healthy infant has a large amount of fetal hemoglobin which is then broken down and replaced by adult hemoglobin. In general, hemoglobin levels decrease after birth and then rebound after the first year of life. We see such a pattern in the DHS data, which I plot below. The curves are the conditional mean of hemoglobin over month of birth, and the gray banner is the 95% confidence interval of this mean. Each point is the mean hemoglobin for children of a certain age in a certain survey. The highlighted region are those children exposed to the 2008 crisis _in-utero_. Note that I observe this cohort twice: first when they are 2 years old, and again when they are 4.
 
-```{r cohort time, fig.height = 6, fig.width = 10, fig.align = "center", fig.cap = "Senegal DHS Hemoglobin data, smoothed over time. The horizontal black line indicates the cutoff for anemia in children."} 
-ggplot(dhs) + geom_smooth(aes(x= Time/12+1900,y=hemoglobin, color = survey))+geom_hline(aes(yintercept=105))+
+```{r cohort time, fig.height =10.5, fig.width = 8, fig.align = "center", fig.cap = "Senegal DHS Hemoglobin data, smoothed over time and age. The horizontal black line indicates the cutoff for anemia in children."} 
+dhs$Survey <- dhs$survey
+p1 <- ggplot(dhs) + geom_smooth(aes(x= Time/12+1900,y=hemoglobin, color = Survey))+geom_hline(aes(yintercept=105))+
 annotate("rect", xmin = 2008.33, xmax = 2008.75, ymin = -Inf , ymax = Inf,color="Orange",alpha = .2)+
-labs(title = "Hemoglobin conditional on DOB by DHS Survey", x ="Birth Month: Jan 2000 = 0", y= "Hemoglobin: g/l")
-ggplot(dhs) + geom_smooth(aes(x= as.numeric(age),y=hemoglobin, color = survey))+geom_hline(aes(yintercept=105))+
+labs(title = "Hemoglobin conditional on DOB by DHS Survey", x ="Date of Birth", y= "Hemoglobin: g/l")
+
+p2 <- ggplot(dhs) + geom_smooth(aes(x= as.numeric(age),y=hemoglobin, color = Survey))+geom_hline(aes(yintercept=105))+
  labs(title = "Hemoglobin conditional on Age by DHS Survey", x ="Age of child in Months", y= "Hemoglobin: g/l")
+
+ggpubr::ggarrange(p1,p2, common.legend = T, legend = "top", nrow = 2,ncol = 1)
+
 ```
-Figure 8 takes the curves from figure 7 and plots them by age-in-months, rather than by age-of-birth. The cutoff for anemia in infants and children, 105 grams per liter of blood is shown as a black, horizontal line. Below the age of 3, anemia is the norm in this sample. Note that these curves are not a trajectory; rather, they are a single cross-section of children of multiple ages. Within an age group, hemoglobin follows a uni-modal, symmetric distribution.
+
+The second plot in figure 5 takes the curves from the first and plots them by age-in-months, rather than by age-of-birth. The cutoff for anemia in infants and children, 105 grams per liter of blood is shown as a black, horizontal line. Below the age of 3, anemia is the norm in this sample. Note that these curves are not a trajectory; rather, they are a single cross-section of children of multiple ages. Within an age group, hemoglobin follows a uni-modal, symmetric distribution.
 
 In order to account for age, I will use a z-score approach analogous to how child height and weight is treated by the WHO. The only surveys which provide information on the 2008 crisis are 2010 and 2012, so I use the other 5 surveys (2005, 2014-17) to make z-scores for the surveys of interest. Taking the mean and standard deviation by age across these 5 surveys, I normalize hemoglobin by age in the 2010 and 2012 surveys. The resulting variable, "hemoglobin-for-age," represents a child's hemoglobin, minus the mean hemoglobin for their age, divided by the standard deviation of hemoglobin for their age. 
 
@@ -303,7 +309,7 @@ texreg::texreg(list(u10,r10,u12,r12),
 
 Following the results of the above regression, I plot the median hemoglobin by birth quarter, split into rural and urban groups and only including observations from the 2010 survey. The black line represents the start of cohorts exposed to the 2008 crisis _in-utero_.
 
-```{r, fig.align = "center", fig.height= 9, fig.width = 6,fig.cap = "Hemoglobin-for-age in 2010 by Birth Quarter"}
+```{r, fig.align = "center", fig.height= 8.75, fig.width = 6,fig.cap = "Hemoglobin-for-age in 2010 by Birth Quarter"}
 load("~/Research/Anemia/Anemia/data/urban_birthq_graph.Rdata")
 ggplot(all_sen) + geom_point(aes(x = birth_q, y=all_sen), size = 3)+geom_vline(xintercept = 7.5)+ facet_wrap(~class, dir = "v")+
 labs(title = "Median hemoglobin by Birth Quarter: 2010",x = "Birth Quarter: 0 = 2006", y= "Median Hemoglobin-for-age")
@@ -385,7 +391,7 @@ Among urban-dwellers, there is substantial attenuation of the effect of the 2008
 
 One possibility, however, is that the attenuation I observe is due to measurement error, rather than to catch-up. For the population as a whole, the effect of the 2008 crisis is larger for those observed in 2012 than in 2010. The difference is that the heterogeneity is more pronounced in the 2010 results. Observables like wealth can change over time, making wealth in 2010 a better proxy than wealth in 2012 for wealth in 2008. This increased measurement error over time could explain the attenuated results for 2012.
 
-Among rural-dwellers, we see the opposite result, as the observed effect of exposure in 2010 is smaller than in 2012. This is misleading, because the estimates on the interaction terms have also changed. From figure 12, we see that the median effect in 2010 is actually larger than in 2012. Simple decomposition of effect by region (figure 16 in Appendix 2) shows that the 2012 rural effect is being driven by Tambacoumba and Kedougou-- the two most isolated parts of Senegal. One could construct a narrative based on this result, but I will refrain. Lacking further evidence or a compelling narrative, I do not place much weight on the 2012 rural results. Instead, I take this result as indicating the general noisiness of my results. Therefore, I call my results "suggestive."
+Among rural-dwellers, we see the opposite result, as the observed effect of exposure in 2010 is smaller than in 2012. This is misleading, because the estimates on the interaction terms have also changed. From figure 9, we see that the median effect in 2010 is actually larger than in 2012. Simple decomposition of effect by region (figure 13 in Appendix 2) shows that the 2012 rural effect is being driven by Tambacoumba and Kedougou-- the two most isolated parts of Senegal. One could construct a narrative based on this result, but I will refrain. Lacking further evidence or a compelling narrative, I do not place much weight on the 2012 rural results. Instead, I take this result as indicating the general noisiness of my results. Therefore, I call my results "suggestive."
 
 With regards to interpretation of exposure, I do not wish to overstate my results. Although exposure was defined with respect to prices, prices *themselves* do not enter into any of the regressions. During the crisis there were protests, unrest and a change in the type of agricultural production, with an increase in staples like millet and sorghum. The estimated effect of the crisis may have more to do with the general characteristics of the period than with prices *per se*. For example, the strong effect in Dakar might come from social unrest, as there was rioting in Dakar during the period. 
 
@@ -397,7 +403,7 @@ ggplot(filter(all_sen,region=="dakar")) + geom_point(aes(x = birth_q, y=all_sen)
 labs(x = "Birth-quarter", y = "Median Hemoglobin-for-Age")
 ``` 
 
-This result suggests that distance to Dakar might be less important than the qualities of Dakar itself. Dakar is a large port with a unique relationship to the world market relative to other cities of Senegal. It is not surprising that the effect of an international crisis was felt most strongly in Dakar. The effect of the 2008 crisis also appears to be delayed. Several explanations of this lag come to mind. One, the first exposed cohort only experienced 1-3 months _in-utero_ during the crisis. Later cohorts were exposed for 8 months. Two, as seen in figure 5, the transmission of world prices to local prices in Dakar takes several months. For both these reasons, it is not surprising that we observe above a lag in the effect of the crisis. Three, given that both credit constraints and hemoglobin are determined by stock variables (see section 2.2-2.3), we would expect lagged effects.
+This result suggests that distance to Dakar might be less important than the qualities of Dakar itself. Dakar is a large port with a unique relationship to the world market relative to other cities of Senegal. It is not surprising that the effect of an international crisis was felt most strongly in Dakar. The effect of the 2008 crisis also appears to be delayed. Several explanations of this lag come to mind. One, the first exposed cohort only experienced 1-3 months _in-utero_ during the crisis. Later cohorts were exposed for 8 months. Two, as seen in figure 3, the transmission of world prices to local prices in Dakar takes several months. For both these reasons, it is not surprising that we observe above a lag in the effect of the crisis. Three, given that both credit constraints and hemoglobin are determined by stock variables (see section 2.2-2.3), we would expect lagged effects.
 
 All of this discussion and analysis has been *specific to Senegal*. One should expect different effects of the 2008 crisis in a different setting. As shown above, millet production increased during 2008. This may reflect a reserve capacity for food production, or the good fortune of high yields coinciding with high price of imports. In either case, it shows the value of having reserve domestic food production capacity. Given a sudden increase in food prices, households may adapt by shifting production towards food. Even if adaptation isn't possible, the independence of world price and local weather conditions imply that having some domestic production and some imported food supply would shrink the variance of food consumption relative to relying fully on imported food. A country which completely abandons local food production in order to specialize in cash crops, would be in a significantly _more vulnerable position_ than Senegal was in 2008. Thus, my results provides some support for the "food-sovereignty" perspective [@rossetFoodSovereigntyContemporary2008].
 
@@ -557,4 +563,4 @@ load("~/Research/Anemia/Anemia/data/birthq_graph.Rdata")
 ggplot(all_sen) + geom_point(aes(x = birth_q, y=all_sen), size = 3)+geom_vline(xintercept = 7.5)+ facet_wrap(~region)
 ```
 
-Here I plot the same results as in figure 13, but for each region of Senegal. We see that Dakar is the only region where the effect of the 2008 crisis is evident to the eye.
+Here I plot the same results as in figure 8, but for each region of Senegal. We see that Dakar is the only region where the effect of the 2008 crisis is evident to the eye.
